# picochat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: logo_ascii.txt
configs/: presets.yml  stage1_basic.yml  stage2_educational.yml  stage3_general.yml
configs/base/: stage1_basic.yml  stage2_educational.yml  stage3_general.yml
configs/base_setup/: base.yml  default.yml  quick200m.yml  stage1.yml  stage1_basic.yml  stage2.yml  stage2_educational.yml  stage3.yml  stage3_general.yml
configs/base_train/: default.yml  long200m.yml  longctx.yml  quick200m.yml  stage1.yml  stage1_basic.yml  stage2.yml  stage2_educational.yml  stage3.yml  stage3_general.yml
configs/dpo/: quick200m.yml  stage.yml
configs/eval/: chat_prompts.jsonl
configs/grpo/: agentic.yml  sample_tasks.jsonl  smoke.yml
configs/preprocess/: stage1_basic.yml  stage2_educational.yml  stage3_general.yml  val.yml
configs/pretrain/: stage1_basic.yml  stage2_educational.yml  stage3_general.yml
configs/pretrian/: stage1_basic.yml  stage3_general.yml
configs/setup_base/: stage1_basic.yml
configs/sft/: setup.yml  stage1.yml
configs/sft_setup/: quick200m.yml  setup.yml
configs/sft_train/: multimodal.yml  quick200m.yml  stage1.yml
configs/smoke/: dpo.workspace.yml  grpo.workspace.yml  setup.workspace.yml  setup.yml  sft_setup.workspace.yml  sft_train.workspace.yml  tok.workspace.yml  tok.yml  train.workspace.yml  train.yml
configs/tok/: default.yml  en_ja.yml  major_langs.yml  quick200m.yml
configs/tokenizer/: default.yml  en.yml  en_ja.yml  pico.yml
data_seeds/: identity.jsonl  safety.jsonl
docs/: continuous_batching.md
picochat/: api.py  audio.py  config.py  dataloader.py  dataset.py  engine.py  eval.py  generate.py  gpt.py  grow.py  grpo.py  kernels.py  linear_attn.py  optim.py  param_estimate.py  presets.py  reward.py  sandbox.py  sparse_attn.py  tasks.py  tokenizer.py  trainer.py
picochat/data/: __init__.py  dataloader.py  dedup.py  multimodal.py  packing.py  pretrain.py  sft.py  sources.py
picochat/evals/: __init__.py  tasks.py
picochat/inference/: __init__.py  api.py  engine.py  quant.py
picochat/model/: __init__.py  audio.py  blocks.py  estimate.py  gpt.py  grow.py  linear_attn.py  lm_module.py  moe.py  multimodal.py  presets.py  sft.py  sparse_attn.py  tools.py  transformer.py  vision.py
picochat/rl/: __init__.py  grpo.py  reward.py  sandbox.py
picochat/tokenizer/: __init__.py
picochat/training/: __init__.py  callbacks.py  checkpoint.py  dpo.py  kernels.py  modules.py  optim.py
scripts/: api.py  avg_ckpts.py  base_chat.py  base_eval.py  base_setup.py  base_train.py  chat.py  chat_eval.py  code_eval.py  dpo_setup.py  dpo_train.py  eval_pretrained.py  grpo_train.py  preprocess.py  pretrain.py  sft_setup.py  sft_train.py  tok_eval.py  tok_patch_chatml.py  tok_train.py  train.py  train_tokenizer.py
tests/: test_api.py  test_audio.py  test_avg_ckpts.py  test_base_data.py  test_base_setup.py  test_blocks.py  test_callbacks.py  test_chat_eval.py  test_chat_tui.py  test_code_eval.py  test_config.py  test_dedup.py  test_distributed.py  test_dpo.py  test_eval.py  test_generate.py  test_gpt.py  test_grow.py  test_grpo.py  test_kernels.py  test_linear_attn.py  test_moe.py  test_multimodal.py  test_optim.py  test_presets.py  test_pretrain_data.py  test_quant.py  test_reward.py  test_sandbox.py  test_seed_data.py  test_sft_data.py  test_sft_module.py  test_sparse_attn.py  test_speculative.py  test_tokenizer.py  test_tools.py  test_train_scripts.py  test_transformer.py  test_vision.py
tests/model/: test_blocks.py  test_gpt.py  test_moe.py  test_mtp.py  test_presets.py  test_sft_module.py  test_transformer.py
