[project]
name = "picochat"
version = "0.1.0"
description = "Train a small chat LLM from scratch for ~$100 (nanochat-inspired)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "lightning>=2.6.5",
    "pyyaml>=6.0",
    "rustbpe>=0.1.0",
    "tensorboard>=2.20.0",
    "textual>=8.0.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "setuptools<82",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "openai>=2.46.0",
]

[project.optional-dependencies]
# Hub-loaded Triton kernels (Liger fused cross-entropy; see picochat/kernels.py).
# Optional: training falls back to the plain loss without it.
kernels = ["kernels>=0.16.0"]


# CUDA 12 (cu126) torch wheels; PyPI ships CUDA 13 builds for torch >= 2.12
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["picochat"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
