[project]
name = "picochat"
version = "0.1.0"
description = "A minimal chat-LLM stack trainable from scratch for ~$100, scalable to larger models (nanochat-inspired)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "lightning>=2.6.5",
    "pyyaml>=6.0",
    "rustbpe>=0.1.0",
    "tensorboard>=2.20.0",
    "textual>=8.0.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "setuptools<82",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "openai>=2.46.0",
]

[project.optional-dependencies]
# Hub-loaded Triton kernels (Liger fused cross-entropy; see picochat/kernels.py).
# Optional: training falls back to the plain loss without it.
kernels = ["kernels>=0.16.0"]
# flash-linear-attention: CUDA Triton kernels for the Gated DeltaNet mixer
# (chunk / fused-recurrent gated delta rule) and, optionally, Native Sparse
# Attention. Optional -- the model ships exact pure-PyTorch implementations of
# both (see picochat/linear_attn.py, picochat/sparse_attn.py) that run on CPU
# and CUDA; fla only makes the CUDA path faster. causal-conv1d fuses the GDN
# short convolution on CUDA. Install for fast large-scale training.
fla = ["flash-linear-attention>=0.1.0", "causal-conv1d>=1.4.0"]


# CUDA 12 (cu126) torch wheels; PyPI ships CUDA 13 builds for torch >= 2.12
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["picochat"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
