[project]
name = "picochat"
version = "0.1.0"
description = "A minimal chat-LLM stack trainable from scratch for ~$100, scalable to larger models (nanochat-inspired)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "lightning>=2.6.5",
    "pyyaml>=6.0",
    "rustbpe>=0.1.0",
    "tensorboard>=2.20.0",
    "textual>=8.0.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "setuptools<82",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "openai>=2.46.0",
    # flash-linear-attention core: the CUDA Triton kernels for the Gated DeltaNet
    # mixer (chunk / fused-recurrent gated delta rule; picochat only uses
    # fla.ops, not the transformers-pulling `flash-linear-attention` package).
    # Linux-only, since the kernels need triton (CUDA) -- on macOS/Windows the
    # import guard in picochat/linear_attn.py falls back to the exact pure-
    # PyTorch implementation, which also serves CPU everywhere.
    "fla-core[cuda]>=0.5.0 ; sys_platform == 'linux'",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
# Hub-loaded Triton kernels (Liger fused cross-entropy; see picochat/kernels.py).
# Optional: training falls back to the plain loss without it.
kernels = ["kernels>=0.16.0"]


# torch resolves from the default PyPI index, which ships CUDA 13 wheels for
# torch >= 2.12 on Linux/Windows (H100 / Blackwell target) and CPU/MPS wheels on
# macOS -- so no custom torch index is needed. (The fla-core[cuda] triton
# kernels above run on CUDA 13 just as on 12.x.)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["picochat"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
